--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div>
     <h1>Clay Webb</h1>
+    <p>clay_webb@outlook.com | 651-964-5585
   <div class="exp-header">
     <h3>Objective</h3>
   </div>
