--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
   </div>
   
   <div>
-    <h5>A.S. Business Administration</h5>
+    <h4>A.S. Business Administration</h4>
     <h5>Inver Hills Community College - Present</h5>
+    <ul1>
+      <li> Partially completed coursework pursuing an A.S. in Business Administration. </li>
+    </uli1>
   </div>
   
 </body>
